k8s/base/auth-gateway/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-gateway
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: 8000
  selector:
    app: auth-gateway
